@@ -245,7 +245,7 @@ HRESULT STDMETHODCALLTYPE WebDatabaseManager::detailsForDatabaseWithOrigin(
     /* [in] */ IWebSecurityOrigin* origin,
     /* [retval][out] */ IPropertyBag** result)
 {
-    if (!databaseName || !origin || !result)
+    if (!origin || !result)
         return E_POINTER;
 
     *result = 0;
@@ -299,8 +299,11 @@ HRESULT STDMETHODCALLTYPE WebDatabaseManager::deleteDatabaseWithOrigin(
     /* [in] */ BSTR databaseName,
     /* [in] */ IWebSecurityOrigin* origin)
 {
-    if (!databaseName || !origin)
+    if (!origin)
         return E_POINTER;
+
+    if (!databaseName)
+        return E_INVALIDARG;
 
     if (this != s_sharedWebDatabaseManager)
         return E_FAIL;
